src/test/ui/issue-49824.stderr
error: compilation successful
  --> $DIR/issue-49824.rs:18:1
   |
LL | / fn main() {
LL | |     //~^ compilation successful
LL | |     let mut x = 0;
LL | |     || {
...  |
LL | |     };
LL | | }
   | |_^

error: aborting due to previous error

